add static files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: nginx
     volumes:
       - ./configs/nginx.conf:/etc/nginx/nginx.conf
+      - ./app/static:/var/app/static
     ports:
       - "4000:80"
     links:
