--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -19,11 +19,21 @@ http{
     }
 
     server {
+    	server_name localhost;
+
         listen 80;
         location / {
             proxy_pass      http://node;
             proxy_redirect  off;
         }
+    }
+
+    server {
+    	server_name static.localhost;
+
+    	location / {
+    		root /var/app/static;
+    	}
     }
 }
 
